[package]
name = "sata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
chrono = "0.4"
cid = "0.7.0"
did-key = "0.1.1"
libipld = "0.13.1"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
base64-url = "1.4.13"
biscuit = "0.5.0"