[package]
name = "sata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
did-key = "0.1"
libipld = { version = "0.14", features = ["serde-codec"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2   = { version = "0.10" }
digest = { version = "0.10" }
aes-gcm = { version = "0.9" }
aead = { version = "0.5", default-features = false }
getrandom = { version = "0.2" }